// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@uedlinker/babel-preset-uedlinker enable Flow.js syntax 1`] = `"function foo(one, two, three) {}"`;

exports[`@uedlinker/babel-preset-uedlinker enable Typescript syntax 1`] = `"var x = 0;"`;

exports[`@uedlinker/babel-preset-uedlinker polyfills 1`] = `
"import \\"core-js/modules/es6.array.copy-within\\";
import \\"core-js/modules/es6.array.every\\";
import \\"core-js/modules/es6.array.fill\\";
import \\"core-js/modules/es6.array.filter\\";
import \\"core-js/modules/es6.array.find\\";
import \\"core-js/modules/es6.array.find-index\\";
import \\"core-js/modules/es6.array.for-each\\";
import \\"core-js/modules/es6.array.from\\";
import \\"core-js/modules/es7.array.includes\\";
import \\"core-js/modules/es6.array.index-of\\";
import \\"core-js/modules/es6.array.is-array\\";
import \\"core-js/modules/es6.array.iterator\\";
import \\"core-js/modules/es6.array.last-index-of\\";
import \\"core-js/modules/es6.array.map\\";
import \\"core-js/modules/es6.array.of\\";
import \\"core-js/modules/es6.array.reduce\\";
import \\"core-js/modules/es6.array.reduce-right\\";
import \\"core-js/modules/es6.array.some\\";
import \\"core-js/modules/es6.array.sort\\";
import \\"core-js/modules/es6.array.species\\";
import \\"core-js/modules/es6.date.now\\";
import \\"core-js/modules/es6.date.to-iso-string\\";
import \\"core-js/modules/es6.date.to-json\\";
import \\"core-js/modules/es6.date.to-primitive\\";
import \\"core-js/modules/es6.date.to-string\\";
import \\"core-js/modules/es6.function.bind\\";
import \\"core-js/modules/es6.function.has-instance\\";
import \\"core-js/modules/es6.function.name\\";
import \\"core-js/modules/es6.map\\";
import \\"core-js/modules/es6.math.acosh\\";
import \\"core-js/modules/es6.math.asinh\\";
import \\"core-js/modules/es6.math.atanh\\";
import \\"core-js/modules/es6.math.cbrt\\";
import \\"core-js/modules/es6.math.clz32\\";
import \\"core-js/modules/es6.math.cosh\\";
import \\"core-js/modules/es6.math.expm1\\";
import \\"core-js/modules/es6.math.fround\\";
import \\"core-js/modules/es6.math.hypot\\";
import \\"core-js/modules/es6.math.imul\\";
import \\"core-js/modules/es6.math.log1p\\";
import \\"core-js/modules/es6.math.log10\\";
import \\"core-js/modules/es6.math.log2\\";
import \\"core-js/modules/es6.math.sign\\";
import \\"core-js/modules/es6.math.sinh\\";
import \\"core-js/modules/es6.math.tanh\\";
import \\"core-js/modules/es6.math.trunc\\";
import \\"core-js/modules/es6.number.constructor\\";
import \\"core-js/modules/es6.number.epsilon\\";
import \\"core-js/modules/es6.number.is-finite\\";
import \\"core-js/modules/es6.number.is-integer\\";
import \\"core-js/modules/es6.number.is-nan\\";
import \\"core-js/modules/es6.number.is-safe-integer\\";
import \\"core-js/modules/es6.number.max-safe-integer\\";
import \\"core-js/modules/es6.number.min-safe-integer\\";
import \\"core-js/modules/es6.number.parse-float\\";
import \\"core-js/modules/es6.number.parse-int\\";
import \\"core-js/modules/es6.object.assign\\";
import \\"core-js/modules/es6.object.create\\";
import \\"core-js/modules/es7.object.define-getter\\";
import \\"core-js/modules/es7.object.define-setter\\";
import \\"core-js/modules/es6.object.define-property\\";
import \\"core-js/modules/es6.object.define-properties\\";
import \\"core-js/modules/es7.object.entries\\";
import \\"core-js/modules/es6.object.freeze\\";
import \\"core-js/modules/es6.object.get-own-property-descriptor\\";
import \\"core-js/modules/es7.object.get-own-property-descriptors\\";
import \\"core-js/modules/es6.object.get-own-property-names\\";
import \\"core-js/modules/es6.object.get-prototype-of\\";
import \\"core-js/modules/es7.object.lookup-getter\\";
import \\"core-js/modules/es7.object.lookup-setter\\";
import \\"core-js/modules/es6.object.prevent-extensions\\";
import \\"core-js/modules/es6.object.is\\";
import \\"core-js/modules/es6.object.is-frozen\\";
import \\"core-js/modules/es6.object.is-sealed\\";
import \\"core-js/modules/es6.object.is-extensible\\";
import \\"core-js/modules/es6.object.keys\\";
import \\"core-js/modules/es6.object.seal\\";
import \\"core-js/modules/es6.object.set-prototype-of\\";
import \\"core-js/modules/es7.object.values\\";
import \\"core-js/modules/es6.promise\\";
import \\"core-js/modules/es7.promise.finally\\";
import \\"core-js/modules/es6.reflect.apply\\";
import \\"core-js/modules/es6.reflect.construct\\";
import \\"core-js/modules/es6.reflect.define-property\\";
import \\"core-js/modules/es6.reflect.delete-property\\";
import \\"core-js/modules/es6.reflect.get\\";
import \\"core-js/modules/es6.reflect.get-own-property-descriptor\\";
import \\"core-js/modules/es6.reflect.get-prototype-of\\";
import \\"core-js/modules/es6.reflect.has\\";
import \\"core-js/modules/es6.reflect.is-extensible\\";
import \\"core-js/modules/es6.reflect.own-keys\\";
import \\"core-js/modules/es6.reflect.prevent-extensions\\";
import \\"core-js/modules/es6.reflect.set\\";
import \\"core-js/modules/es6.reflect.set-prototype-of\\";
import \\"core-js/modules/es6.regexp.constructor\\";
import \\"core-js/modules/es6.regexp.flags\\";
import \\"core-js/modules/es6.regexp.match\\";
import \\"core-js/modules/es6.regexp.replace\\";
import \\"core-js/modules/es6.regexp.split\\";
import \\"core-js/modules/es6.regexp.search\\";
import \\"core-js/modules/es6.regexp.to-string\\";
import \\"core-js/modules/es6.set\\";
import \\"core-js/modules/es6.symbol\\";
import \\"core-js/modules/es7.symbol.async-iterator\\";
import \\"core-js/modules/es6.string.anchor\\";
import \\"core-js/modules/es6.string.big\\";
import \\"core-js/modules/es6.string.blink\\";
import \\"core-js/modules/es6.string.bold\\";
import \\"core-js/modules/es6.string.code-point-at\\";
import \\"core-js/modules/es6.string.ends-with\\";
import \\"core-js/modules/es6.string.fixed\\";
import \\"core-js/modules/es6.string.fontcolor\\";
import \\"core-js/modules/es6.string.fontsize\\";
import \\"core-js/modules/es6.string.from-code-point\\";
import \\"core-js/modules/es6.string.includes\\";
import \\"core-js/modules/es6.string.italics\\";
import \\"core-js/modules/es6.string.iterator\\";
import \\"core-js/modules/es6.string.link\\";
import \\"core-js/modules/es7.string.pad-start\\";
import \\"core-js/modules/es7.string.pad-end\\";
import \\"core-js/modules/es6.string.raw\\";
import \\"core-js/modules/es6.string.repeat\\";
import \\"core-js/modules/es6.string.small\\";
import \\"core-js/modules/es6.string.starts-with\\";
import \\"core-js/modules/es6.string.strike\\";
import \\"core-js/modules/es6.string.sub\\";
import \\"core-js/modules/es6.string.sup\\";
import \\"core-js/modules/es6.string.trim\\";
import \\"core-js/modules/es6.typed.array-buffer\\";
import \\"core-js/modules/es6.typed.data-view\\";
import \\"core-js/modules/es6.typed.int8-array\\";
import \\"core-js/modules/es6.typed.uint8-array\\";
import \\"core-js/modules/es6.typed.uint8-clamped-array\\";
import \\"core-js/modules/es6.typed.int16-array\\";
import \\"core-js/modules/es6.typed.uint16-array\\";
import \\"core-js/modules/es6.typed.int32-array\\";
import \\"core-js/modules/es6.typed.uint32-array\\";
import \\"core-js/modules/es6.typed.float32-array\\";
import \\"core-js/modules/es6.typed.float64-array\\";
import \\"core-js/modules/es6.weak-map\\";
import \\"core-js/modules/es6.weak-set\\";
import \\"core-js/modules/web.timers\\";
import \\"core-js/modules/web.immediate\\";
import \\"core-js/modules/web.dom.iterable\\";
import \\"regenerator-runtime/runtime\\";"
`;

exports[`@uedlinker/babel-preset-uedlinker polyfills 2`] = `
"import \\"core-js/modules/es6.array.copy-within\\";
import \\"core-js/modules/es6.array.every\\";
import \\"core-js/modules/es6.array.fill\\";
import \\"core-js/modules/es6.array.filter\\";
import \\"core-js/modules/es6.array.find\\";
import \\"core-js/modules/es6.array.find-index\\";
import \\"core-js/modules/es6.array.for-each\\";
import \\"core-js/modules/es6.array.from\\";
import \\"core-js/modules/es7.array.includes\\";
import \\"core-js/modules/es6.array.index-of\\";
import \\"core-js/modules/es6.array.is-array\\";
import \\"core-js/modules/es6.array.iterator\\";
import \\"core-js/modules/es6.array.last-index-of\\";
import \\"core-js/modules/es6.array.map\\";
import \\"core-js/modules/es6.array.of\\";
import \\"core-js/modules/es6.array.reduce\\";
import \\"core-js/modules/es6.array.reduce-right\\";
import \\"core-js/modules/es6.array.some\\";
import \\"core-js/modules/es6.array.sort\\";
import \\"core-js/modules/es6.array.species\\";
import \\"core-js/modules/es6.date.now\\";
import \\"core-js/modules/es6.date.to-iso-string\\";
import \\"core-js/modules/es6.date.to-json\\";
import \\"core-js/modules/es6.date.to-primitive\\";
import \\"core-js/modules/es6.date.to-string\\";
import \\"core-js/modules/es6.function.bind\\";
import \\"core-js/modules/es6.function.has-instance\\";
import \\"core-js/modules/es6.function.name\\";
import \\"core-js/modules/es6.map\\";
import \\"core-js/modules/es6.math.acosh\\";
import \\"core-js/modules/es6.math.asinh\\";
import \\"core-js/modules/es6.math.atanh\\";
import \\"core-js/modules/es6.math.cbrt\\";
import \\"core-js/modules/es6.math.clz32\\";
import \\"core-js/modules/es6.math.cosh\\";
import \\"core-js/modules/es6.math.expm1\\";
import \\"core-js/modules/es6.math.fround\\";
import \\"core-js/modules/es6.math.hypot\\";
import \\"core-js/modules/es6.math.imul\\";
import \\"core-js/modules/es6.math.log1p\\";
import \\"core-js/modules/es6.math.log10\\";
import \\"core-js/modules/es6.math.log2\\";
import \\"core-js/modules/es6.math.sign\\";
import \\"core-js/modules/es6.math.sinh\\";
import \\"core-js/modules/es6.math.tanh\\";
import \\"core-js/modules/es6.math.trunc\\";
import \\"core-js/modules/es6.number.constructor\\";
import \\"core-js/modules/es6.number.epsilon\\";
import \\"core-js/modules/es6.number.is-finite\\";
import \\"core-js/modules/es6.number.is-integer\\";
import \\"core-js/modules/es6.number.is-nan\\";
import \\"core-js/modules/es6.number.is-safe-integer\\";
import \\"core-js/modules/es6.number.max-safe-integer\\";
import \\"core-js/modules/es6.number.min-safe-integer\\";
import \\"core-js/modules/es6.number.parse-float\\";
import \\"core-js/modules/es6.number.parse-int\\";
import \\"core-js/modules/es6.object.assign\\";
import \\"core-js/modules/es6.object.create\\";
import \\"core-js/modules/es7.object.define-getter\\";
import \\"core-js/modules/es7.object.define-setter\\";
import \\"core-js/modules/es6.object.define-property\\";
import \\"core-js/modules/es6.object.define-properties\\";
import \\"core-js/modules/es7.object.entries\\";
import \\"core-js/modules/es6.object.freeze\\";
import \\"core-js/modules/es6.object.get-own-property-descriptor\\";
import \\"core-js/modules/es7.object.get-own-property-descriptors\\";
import \\"core-js/modules/es6.object.get-own-property-names\\";
import \\"core-js/modules/es6.object.get-prototype-of\\";
import \\"core-js/modules/es7.object.lookup-getter\\";
import \\"core-js/modules/es7.object.lookup-setter\\";
import \\"core-js/modules/es6.object.prevent-extensions\\";
import \\"core-js/modules/es6.object.is\\";
import \\"core-js/modules/es6.object.is-frozen\\";
import \\"core-js/modules/es6.object.is-sealed\\";
import \\"core-js/modules/es6.object.is-extensible\\";
import \\"core-js/modules/es6.object.keys\\";
import \\"core-js/modules/es6.object.seal\\";
import \\"core-js/modules/es6.object.set-prototype-of\\";
import \\"core-js/modules/es7.object.values\\";
import \\"core-js/modules/es6.promise\\";
import \\"core-js/modules/es7.promise.finally\\";
import \\"core-js/modules/es6.reflect.apply\\";
import \\"core-js/modules/es6.reflect.construct\\";
import \\"core-js/modules/es6.reflect.define-property\\";
import \\"core-js/modules/es6.reflect.delete-property\\";
import \\"core-js/modules/es6.reflect.get\\";
import \\"core-js/modules/es6.reflect.get-own-property-descriptor\\";
import \\"core-js/modules/es6.reflect.get-prototype-of\\";
import \\"core-js/modules/es6.reflect.has\\";
import \\"core-js/modules/es6.reflect.is-extensible\\";
import \\"core-js/modules/es6.reflect.own-keys\\";
import \\"core-js/modules/es6.reflect.prevent-extensions\\";
import \\"core-js/modules/es6.reflect.set\\";
import \\"core-js/modules/es6.reflect.set-prototype-of\\";
import \\"core-js/modules/es6.regexp.constructor\\";
import \\"core-js/modules/es6.regexp.flags\\";
import \\"core-js/modules/es6.regexp.match\\";
import \\"core-js/modules/es6.regexp.replace\\";
import \\"core-js/modules/es6.regexp.split\\";
import \\"core-js/modules/es6.regexp.search\\";
import \\"core-js/modules/es6.regexp.to-string\\";
import \\"core-js/modules/es6.set\\";
import \\"core-js/modules/es6.symbol\\";
import \\"core-js/modules/es7.symbol.async-iterator\\";
import \\"core-js/modules/es6.string.anchor\\";
import \\"core-js/modules/es6.string.big\\";
import \\"core-js/modules/es6.string.blink\\";
import \\"core-js/modules/es6.string.bold\\";
import \\"core-js/modules/es6.string.code-point-at\\";
import \\"core-js/modules/es6.string.ends-with\\";
import \\"core-js/modules/es6.string.fixed\\";
import \\"core-js/modules/es6.string.fontcolor\\";
import \\"core-js/modules/es6.string.fontsize\\";
import \\"core-js/modules/es6.string.from-code-point\\";
import \\"core-js/modules/es6.string.includes\\";
import \\"core-js/modules/es6.string.italics\\";
import \\"core-js/modules/es6.string.iterator\\";
import \\"core-js/modules/es6.string.link\\";
import \\"core-js/modules/es7.string.pad-start\\";
import \\"core-js/modules/es7.string.pad-end\\";
import \\"core-js/modules/es6.string.raw\\";
import \\"core-js/modules/es6.string.repeat\\";
import \\"core-js/modules/es6.string.small\\";
import \\"core-js/modules/es6.string.starts-with\\";
import \\"core-js/modules/es6.string.strike\\";
import \\"core-js/modules/es6.string.sub\\";
import \\"core-js/modules/es6.string.sup\\";
import \\"core-js/modules/es6.string.trim\\";
import \\"core-js/modules/es6.typed.array-buffer\\";
import \\"core-js/modules/es6.typed.data-view\\";
import \\"core-js/modules/es6.typed.int8-array\\";
import \\"core-js/modules/es6.typed.uint8-array\\";
import \\"core-js/modules/es6.typed.uint8-clamped-array\\";
import \\"core-js/modules/es6.typed.int16-array\\";
import \\"core-js/modules/es6.typed.uint16-array\\";
import \\"core-js/modules/es6.typed.int32-array\\";
import \\"core-js/modules/es6.typed.uint32-array\\";
import \\"core-js/modules/es6.typed.float32-array\\";
import \\"core-js/modules/es6.typed.float64-array\\";
import \\"core-js/modules/es6.weak-map\\";
import \\"core-js/modules/es6.weak-set\\";
import \\"core-js/modules/web.timers\\";
import \\"core-js/modules/web.immediate\\";
import \\"core-js/modules/web.dom.iterable\\";
import \\"regenerator-runtime/runtime\\";"
`;

exports[`@uedlinker/babel-preset-uedlinker polyfills 3`] = `
"\\"use strict\\";

require(\\"@babel/polyfill\\");"
`;

exports[`@uedlinker/babel-preset-uedlinker stages 1`] = `
"var _context;

(_context = obj, func).bind(_context);"
`;

exports[`@uedlinker/babel-preset-uedlinker stages 2`] = `
"import _v from 'mod';
export { _v as v };"
`;

exports[`@uedlinker/babel-preset-uedlinker stages 3`] = `"a || (a = b);"`;

exports[`@uedlinker/babel-preset-uedlinker stages 4`] = `
"var _obj, _obj$foo, _obj$foo$bar;

var baz = (_obj = obj) === null || _obj === void 0 ? void 0 : (_obj$foo = _obj.foo) === null || _obj$foo === void 0 ? void 0 : (_obj$foo$bar = _obj$foo.bar) === null || _obj$foo$bar === void 0 ? void 0 : _obj$foo$bar.baz();"
`;

exports[`@uedlinker/babel-preset-uedlinker stages 5`] = `
"var _object$foo;

var foo = (_object$foo = object.foo) !== null && _object$foo !== void 0 ? _object$foo : \\"default\\";"
`;

exports[`@uedlinker/babel-preset-uedlinker stages 6`] = `"var a = x > 10 ? 'big' : 'small';"`;

exports[`@uedlinker/babel-preset-uedlinker stages 7`] = `
"import _classCallCheck from \\"@babel/runtime/helpers/esm/classCallCheck\\";

var _class;

var MyClass = annotation(_class = function MyClass() {
  _classCallCheck(this, MyClass);
}) || _class;"
`;

exports[`@uedlinker/babel-preset-uedlinker stages 8`] = `
"import _regeneratorRuntime from \\"@babel/runtime/regenerator\\";
import _skipFirstGeneratorNext from \\"@babel/runtime/helpers/esm/skipFirstGeneratorNext\\";

function generator() {
  return _generator.apply(this, arguments);
}

function _generator() {
  _generator = _skipFirstGeneratorNext(
  /*#__PURE__*/
  _regeneratorRuntime.mark(function _callee() {
    var _functionSent;

    return _regeneratorRuntime.wrap(function _callee$(_context) {
      while (1) {
        switch (_context.prev = _context.next) {
          case 0:
            _context.next = 2;
            return;

          case 2:
            _functionSent = _context.sent;
            console.log(\\"Sent\\", _functionSent);
            _context.t0 = console;
            _context.next = 7;
            return;

          case 7:
            _context.t1 = _functionSent = _context.sent;

            _context.t0.log.call(_context.t0, \\"Yield\\", _context.t1);

          case 9:
          case \\"end\\":
            return _context.stop();
        }
      }
    }, _callee, this);
  }));
  return _generator.apply(this, arguments);
}"
`;

exports[`@uedlinker/babel-preset-uedlinker stages 9`] = `
"import * as _ns from 'mod';
export { _ns as ns };"
`;

exports[`@uedlinker/babel-preset-uedlinker stages 10`] = `"var budget = 1000000000000;"`;

exports[`@uedlinker/babel-preset-uedlinker stages 11`] = `
"function test() {
  var param = arguments.length > 0 && arguments[0] !== undefined ? arguments[0] : function (e) {
    throw e;
  }(new Error('required!'));

  var test = param === true || function (e) {
    throw e;
  }(new Error('Falsey!'));
}"
`;

exports[`@uedlinker/babel-preset-uedlinker stages 12`] = `"import('./test.js');"`;

exports[`@uedlinker/babel-preset-uedlinker stages 13`] = `
"import _classCallCheck from \\"@babel/runtime/helpers/esm/classCallCheck\\";

var Bork = function Bork() {
  var _this = this;

  _classCallCheck(this, Bork);

  this.instanceProperty = \\"bork\\";

  this.boundFunction = function () {
    return _this.instanceProperty;
  };
};

Bork.staticProperty = \\"babelIsCool\\";

Bork.staticFunction = function () {
  return Bork.staticProperty;
};"
`;

exports[`@uedlinker/babel-preset-uedlinker stages 14`] = `
"import _regeneratorRuntime from \\"@babel/runtime/regenerator\\";
import _awaitAsyncGenerator from \\"@babel/runtime/helpers/esm/awaitAsyncGenerator\\";
import _wrapAsyncGenerator from \\"@babel/runtime/helpers/esm/wrapAsyncGenerator\\";

function agf() {
  return _agf.apply(this, arguments);
}

function _agf() {
  _agf = _wrapAsyncGenerator(
  /*#__PURE__*/
  _regeneratorRuntime.mark(function _callee() {
    return _regeneratorRuntime.wrap(function _callee$(_context) {
      while (1) {
        switch (_context.prev = _context.next) {
          case 0:
            _context.next = 2;
            return _awaitAsyncGenerator(1);

          case 2:
            _context.next = 4;
            return 2;

          case 4:
          case \\"end\\":
            return _context.stop();
        }
      }
    }, _callee, this);
  }));
  return _agf.apply(this, arguments);
}"
`;

exports[`@uedlinker/babel-preset-uedlinker stages 15`] = `"/[\\\\0-\\\\uFFFF]/;"`;

exports[`@uedlinker/babel-preset-uedlinker stages 16`] = `
"import _objectWithoutProperties from \\"@babel/runtime/helpers/esm/objectWithoutProperties\\";

var _x$y$a$b = {
  x: 1,
  y: 2,
  a: 3,
  b: 4
},
    x = _x$y$a$b.x,
    y = _x$y$a$b.y,
    z = _objectWithoutProperties(_x$y$a$b, [\\"x\\", \\"y\\"]);"
`;

exports[`@uedlinker/babel-preset-uedlinker stages 17`] = `
"try {
  throw 0;
} catch (_unused) {
  doSomethingWhichDoesntCareAboutTheValueThrown();
}"
`;

exports[`@uedlinker/babel-preset-uedlinker stages 18`] = `
"import _v from 'mod';
export { _v as v };"
`;

exports[`@uedlinker/babel-preset-uedlinker stages 19`] = `"a || (a = b);"`;

exports[`@uedlinker/babel-preset-uedlinker stages 20`] = `
"var _obj, _obj$foo, _obj$foo$bar;

var baz = (_obj = obj) === null || _obj === void 0 ? void 0 : (_obj$foo = _obj.foo) === null || _obj$foo === void 0 ? void 0 : (_obj$foo$bar = _obj$foo.bar) === null || _obj$foo$bar === void 0 ? void 0 : _obj$foo$bar.baz();"
`;

exports[`@uedlinker/babel-preset-uedlinker stages 21`] = `
"var _object$foo;

var foo = (_object$foo = object.foo) !== null && _object$foo !== void 0 ? _object$foo : \\"default\\";"
`;

exports[`@uedlinker/babel-preset-uedlinker stages 22`] = `"var a = x > 10 ? 'big' : 'small';"`;

exports[`@uedlinker/babel-preset-uedlinker stages 23`] = `
"import _classCallCheck from \\"@babel/runtime/helpers/esm/classCallCheck\\";

var _class;

var MyClass = annotation(_class = function MyClass() {
  _classCallCheck(this, MyClass);
}) || _class;"
`;

exports[`@uedlinker/babel-preset-uedlinker stages 24`] = `
"import _regeneratorRuntime from \\"@babel/runtime/regenerator\\";
import _skipFirstGeneratorNext from \\"@babel/runtime/helpers/esm/skipFirstGeneratorNext\\";

function generator() {
  return _generator.apply(this, arguments);
}

function _generator() {
  _generator = _skipFirstGeneratorNext(
  /*#__PURE__*/
  _regeneratorRuntime.mark(function _callee() {
    var _functionSent;

    return _regeneratorRuntime.wrap(function _callee$(_context) {
      while (1) {
        switch (_context.prev = _context.next) {
          case 0:
            _context.next = 2;
            return;

          case 2:
            _functionSent = _context.sent;
            console.log(\\"Sent\\", _functionSent);
            _context.t0 = console;
            _context.next = 7;
            return;

          case 7:
            _context.t1 = _functionSent = _context.sent;

            _context.t0.log.call(_context.t0, \\"Yield\\", _context.t1);

          case 9:
          case \\"end\\":
            return _context.stop();
        }
      }
    }, _callee, this);
  }));
  return _generator.apply(this, arguments);
}"
`;

exports[`@uedlinker/babel-preset-uedlinker stages 25`] = `
"import * as _ns from 'mod';
export { _ns as ns };"
`;

exports[`@uedlinker/babel-preset-uedlinker stages 26`] = `"var budget = 1000000000000;"`;

exports[`@uedlinker/babel-preset-uedlinker stages 27`] = `
"function test() {
  var param = arguments.length > 0 && arguments[0] !== undefined ? arguments[0] : function (e) {
    throw e;
  }(new Error('required!'));

  var test = param === true || function (e) {
    throw e;
  }(new Error('Falsey!'));
}"
`;

exports[`@uedlinker/babel-preset-uedlinker stages 28`] = `"import('./test.js');"`;

exports[`@uedlinker/babel-preset-uedlinker stages 29`] = `
"import _classCallCheck from \\"@babel/runtime/helpers/esm/classCallCheck\\";

var Bork = function Bork() {
  var _this = this;

  _classCallCheck(this, Bork);

  this.instanceProperty = \\"bork\\";

  this.boundFunction = function () {
    return _this.instanceProperty;
  };
};

Bork.staticProperty = \\"babelIsCool\\";

Bork.staticFunction = function () {
  return Bork.staticProperty;
};"
`;

exports[`@uedlinker/babel-preset-uedlinker stages 30`] = `
"import _regeneratorRuntime from \\"@babel/runtime/regenerator\\";
import _awaitAsyncGenerator from \\"@babel/runtime/helpers/esm/awaitAsyncGenerator\\";
import _wrapAsyncGenerator from \\"@babel/runtime/helpers/esm/wrapAsyncGenerator\\";

function agf() {
  return _agf.apply(this, arguments);
}

function _agf() {
  _agf = _wrapAsyncGenerator(
  /*#__PURE__*/
  _regeneratorRuntime.mark(function _callee() {
    return _regeneratorRuntime.wrap(function _callee$(_context) {
      while (1) {
        switch (_context.prev = _context.next) {
          case 0:
            _context.next = 2;
            return _awaitAsyncGenerator(1);

          case 2:
            _context.next = 4;
            return 2;

          case 4:
          case \\"end\\":
            return _context.stop();
        }
      }
    }, _callee, this);
  }));
  return _agf.apply(this, arguments);
}"
`;

exports[`@uedlinker/babel-preset-uedlinker stages 31`] = `"/[\\\\0-\\\\uFFFF]/;"`;

exports[`@uedlinker/babel-preset-uedlinker stages 32`] = `
"import _objectWithoutProperties from \\"@babel/runtime/helpers/esm/objectWithoutProperties\\";

var _x$y$a$b = {
  x: 1,
  y: 2,
  a: 3,
  b: 4
},
    x = _x$y$a$b.x,
    y = _x$y$a$b.y,
    z = _objectWithoutProperties(_x$y$a$b, [\\"x\\", \\"y\\"]);"
`;

exports[`@uedlinker/babel-preset-uedlinker stages 33`] = `
"try {
  throw 0;
} catch (_unused) {
  doSomethingWhichDoesntCareAboutTheValueThrown();
}"
`;

exports[`@uedlinker/babel-preset-uedlinker stages 34`] = `
"import _classCallCheck from \\"@babel/runtime/helpers/esm/classCallCheck\\";

var _class;

var MyClass = annotation(_class = function MyClass() {
  _classCallCheck(this, MyClass);
}) || _class;"
`;

exports[`@uedlinker/babel-preset-uedlinker stages 35`] = `
"import _regeneratorRuntime from \\"@babel/runtime/regenerator\\";
import _skipFirstGeneratorNext from \\"@babel/runtime/helpers/esm/skipFirstGeneratorNext\\";

function generator() {
  return _generator.apply(this, arguments);
}

function _generator() {
  _generator = _skipFirstGeneratorNext(
  /*#__PURE__*/
  _regeneratorRuntime.mark(function _callee() {
    var _functionSent;

    return _regeneratorRuntime.wrap(function _callee$(_context) {
      while (1) {
        switch (_context.prev = _context.next) {
          case 0:
            _context.next = 2;
            return;

          case 2:
            _functionSent = _context.sent;
            console.log(\\"Sent\\", _functionSent);
            _context.t0 = console;
            _context.next = 7;
            return;

          case 7:
            _context.t1 = _functionSent = _context.sent;

            _context.t0.log.call(_context.t0, \\"Yield\\", _context.t1);

          case 9:
          case \\"end\\":
            return _context.stop();
        }
      }
    }, _callee, this);
  }));
  return _generator.apply(this, arguments);
}"
`;

exports[`@uedlinker/babel-preset-uedlinker stages 36`] = `
"import * as _ns from 'mod';
export { _ns as ns };"
`;

exports[`@uedlinker/babel-preset-uedlinker stages 37`] = `"var budget = 1000000000000;"`;

exports[`@uedlinker/babel-preset-uedlinker stages 38`] = `
"function test() {
  var param = arguments.length > 0 && arguments[0] !== undefined ? arguments[0] : function (e) {
    throw e;
  }(new Error('required!'));

  var test = param === true || function (e) {
    throw e;
  }(new Error('Falsey!'));
}"
`;

exports[`@uedlinker/babel-preset-uedlinker stages 39`] = `"import('./test.js');"`;

exports[`@uedlinker/babel-preset-uedlinker stages 40`] = `
"import _classCallCheck from \\"@babel/runtime/helpers/esm/classCallCheck\\";

var Bork = function Bork() {
  var _this = this;

  _classCallCheck(this, Bork);

  this.instanceProperty = \\"bork\\";

  this.boundFunction = function () {
    return _this.instanceProperty;
  };
};

Bork.staticProperty = \\"babelIsCool\\";

Bork.staticFunction = function () {
  return Bork.staticProperty;
};"
`;

exports[`@uedlinker/babel-preset-uedlinker stages 41`] = `
"import _regeneratorRuntime from \\"@babel/runtime/regenerator\\";
import _awaitAsyncGenerator from \\"@babel/runtime/helpers/esm/awaitAsyncGenerator\\";
import _wrapAsyncGenerator from \\"@babel/runtime/helpers/esm/wrapAsyncGenerator\\";

function agf() {
  return _agf.apply(this, arguments);
}

function _agf() {
  _agf = _wrapAsyncGenerator(
  /*#__PURE__*/
  _regeneratorRuntime.mark(function _callee() {
    return _regeneratorRuntime.wrap(function _callee$(_context) {
      while (1) {
        switch (_context.prev = _context.next) {
          case 0:
            _context.next = 2;
            return _awaitAsyncGenerator(1);

          case 2:
            _context.next = 4;
            return 2;

          case 4:
          case \\"end\\":
            return _context.stop();
        }
      }
    }, _callee, this);
  }));
  return _agf.apply(this, arguments);
}"
`;

exports[`@uedlinker/babel-preset-uedlinker stages 42`] = `"/[\\\\0-\\\\uFFFF]/;"`;

exports[`@uedlinker/babel-preset-uedlinker stages 43`] = `
"import _objectWithoutProperties from \\"@babel/runtime/helpers/esm/objectWithoutProperties\\";

var _x$y$a$b = {
  x: 1,
  y: 2,
  a: 3,
  b: 4
},
    x = _x$y$a$b.x,
    y = _x$y$a$b.y,
    z = _objectWithoutProperties(_x$y$a$b, [\\"x\\", \\"y\\"]);"
`;

exports[`@uedlinker/babel-preset-uedlinker stages 44`] = `
"try {
  throw 0;
} catch (_unused) {
  doSomethingWhichDoesntCareAboutTheValueThrown();
}"
`;

exports[`@uedlinker/babel-preset-uedlinker stages 45`] = `"import('./test.js');"`;

exports[`@uedlinker/babel-preset-uedlinker stages 46`] = `
"import _classCallCheck from \\"@babel/runtime/helpers/esm/classCallCheck\\";

var Bork = function Bork() {
  var _this = this;

  _classCallCheck(this, Bork);

  this.instanceProperty = \\"bork\\";

  this.boundFunction = function () {
    return _this.instanceProperty;
  };
};

Bork.staticProperty = \\"babelIsCool\\";

Bork.staticFunction = function () {
  return Bork.staticProperty;
};"
`;

exports[`@uedlinker/babel-preset-uedlinker stages 47`] = `
"import _regeneratorRuntime from \\"@babel/runtime/regenerator\\";
import _awaitAsyncGenerator from \\"@babel/runtime/helpers/esm/awaitAsyncGenerator\\";
import _wrapAsyncGenerator from \\"@babel/runtime/helpers/esm/wrapAsyncGenerator\\";

function agf() {
  return _agf.apply(this, arguments);
}

function _agf() {
  _agf = _wrapAsyncGenerator(
  /*#__PURE__*/
  _regeneratorRuntime.mark(function _callee() {
    return _regeneratorRuntime.wrap(function _callee$(_context) {
      while (1) {
        switch (_context.prev = _context.next) {
          case 0:
            _context.next = 2;
            return _awaitAsyncGenerator(1);

          case 2:
            _context.next = 4;
            return 2;

          case 4:
          case \\"end\\":
            return _context.stop();
        }
      }
    }, _callee, this);
  }));
  return _agf.apply(this, arguments);
}"
`;

exports[`@uedlinker/babel-preset-uedlinker stages 48`] = `"/[\\\\0-\\\\uFFFF]/;"`;

exports[`@uedlinker/babel-preset-uedlinker stages 49`] = `
"import _objectWithoutProperties from \\"@babel/runtime/helpers/esm/objectWithoutProperties\\";

var _x$y$a$b = {
  x: 1,
  y: 2,
  a: 3,
  b: 4
},
    x = _x$y$a$b.x,
    y = _x$y$a$b.y,
    z = _objectWithoutProperties(_x$y$a$b, [\\"x\\", \\"y\\"]);"
`;

exports[`@uedlinker/babel-preset-uedlinker stages 50`] = `
"try {
  throw 0;
} catch (_unused) {
  doSomethingWhichDoesntCareAboutTheValueThrown();
}"
`;

exports[`@uedlinker/babel-preset-uedlinker stages 51`] = `
"import _regeneratorRuntime from \\"@babel/runtime/regenerator\\";
import _awaitAsyncGenerator from \\"@babel/runtime/helpers/esm/awaitAsyncGenerator\\";
import _wrapAsyncGenerator from \\"@babel/runtime/helpers/esm/wrapAsyncGenerator\\";

function agf() {
  return _agf.apply(this, arguments);
}

function _agf() {
  _agf = _wrapAsyncGenerator(
  /*#__PURE__*/
  _regeneratorRuntime.mark(function _callee() {
    return _regeneratorRuntime.wrap(function _callee$(_context) {
      while (1) {
        switch (_context.prev = _context.next) {
          case 0:
            _context.next = 2;
            return _awaitAsyncGenerator(1);

          case 2:
            _context.next = 4;
            return 2;

          case 4:
          case \\"end\\":
            return _context.stop();
        }
      }
    }, _callee, this);
  }));
  return _agf.apply(this, arguments);
}"
`;

exports[`@uedlinker/babel-preset-uedlinker stages 52`] = `"/[\\\\0-\\\\uFFFF]/;"`;

exports[`@uedlinker/babel-preset-uedlinker stages 53`] = `
"import _objectWithoutProperties from \\"@babel/runtime/helpers/esm/objectWithoutProperties\\";

var _x$y$a$b = {
  x: 1,
  y: 2,
  a: 3,
  b: 4
},
    x = _x$y$a$b.x,
    y = _x$y$a$b.y,
    z = _objectWithoutProperties(_x$y$a$b, [\\"x\\", \\"y\\"]);"
`;

exports[`@uedlinker/babel-preset-uedlinker stages 54`] = `
"try {
  throw 0;
} catch (_unused) {
  doSomethingWhichDoesntCareAboutTheValueThrown();
}"
`;

exports[`@uedlinker/babel-preset-uedlinker stages 55`] = `
"import _regeneratorRuntime from \\"@babel/runtime/regenerator\\";
import _awaitAsyncGenerator from \\"@babel/runtime/helpers/esm/awaitAsyncGenerator\\";
import _wrapAsyncGenerator from \\"@babel/runtime/helpers/esm/wrapAsyncGenerator\\";

function agf() {
  return _agf.apply(this, arguments);
}

function _agf() {
  _agf = _wrapAsyncGenerator(
  /*#__PURE__*/
  _regeneratorRuntime.mark(function _callee() {
    return _regeneratorRuntime.wrap(function _callee$(_context) {
      while (1) {
        switch (_context.prev = _context.next) {
          case 0:
            _context.next = 2;
            return _awaitAsyncGenerator(1);

          case 2:
            _context.next = 4;
            return 2;

          case 4:
          case \\"end\\":
            return _context.stop();
        }
      }
    }, _callee, this);
  }));
  return _agf.apply(this, arguments);
}"
`;

exports[`@uedlinker/babel-preset-uedlinker stages 56`] = `"/[\\\\0-\\\\uFFFF]/;"`;

exports[`@uedlinker/babel-preset-uedlinker stages 57`] = `
"import _objectWithoutProperties from \\"@babel/runtime/helpers/esm/objectWithoutProperties\\";

var _x$y$a$b = {
  x: 1,
  y: 2,
  a: 3,
  b: 4
},
    x = _x$y$a$b.x,
    y = _x$y$a$b.y,
    z = _objectWithoutProperties(_x$y$a$b, [\\"x\\", \\"y\\"]);"
`;

exports[`@uedlinker/babel-preset-uedlinker stages 58`] = `
"try {
  throw 0;
} catch (_unused) {
  doSomethingWhichDoesntCareAboutTheValueThrown();
}"
`;

exports[`@uedlinker/babel-preset-uedlinker support React 1`] = `
"import _classCallCheck from \\"@babel/runtime/helpers/esm/classCallCheck\\";
import _createClass from \\"@babel/runtime/helpers/esm/createClass\\";
import _possibleConstructorReturn from \\"@babel/runtime/helpers/esm/possibleConstructorReturn\\";
import _getPrototypeOf from \\"@babel/runtime/helpers/esm/getPrototypeOf\\";
import _inherits from \\"@babel/runtime/helpers/esm/inherits\\";
var _jsxFileName = \\"\\";
import React, { Component } from 'react';

var HelloWorld =
/*#__PURE__*/
function (_Component) {
  _inherits(HelloWorld, _Component);

  function HelloWorld() {
    _classCallCheck(this, HelloWorld);

    return _possibleConstructorReturn(this, _getPrototypeOf(HelloWorld).apply(this, arguments));
  }

  _createClass(HelloWorld, [{
    key: \\"render\\",
    value: function render() {
      return React.createElement(\\"h1\\", {
        __source: {
          fileName: _jsxFileName,
          lineNumber: 5
        },
        __self: this
      }, \\"Hello World\\");
    }
  }]);

  return HelloWorld;
}(Component);"
`;

exports[`@uedlinker/babel-preset-uedlinker transform generator functions to regenerator 1`] = `
"import _regeneratorRuntime from \\"@babel/runtime/regenerator\\";

var _marked =
/*#__PURE__*/
_regeneratorRuntime.mark(foo);

function foo() {
  return _regeneratorRuntime.wrap(function foo$(_context) {
    while (1) {
      switch (_context.prev = _context.next) {
        case 0:
        case \\"end\\":
          return _context.stop();
      }
    }
  }, _marked, this);
}"
`;
